Update 'btkb3l8jj-dotnet-basic' component image to: quay.io/rhtap_qe/rhtap-qe:1d4f5fe2136e916981cbe301231b57cf0eb7530d@sha256:056298153c8611c261f7d02a1ea01fc7b610da43059374ee7a92527cdf8bdd48

--- a/components/btkb3l8jj-dotnet-basic/overlays/development/deployment-patch.yaml
+++ b/components/btkb3l8jj-dotnet-basic/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: btkb3l8jj-dotnet-basic
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe:1d4f5fe2136e916981cbe301231b57cf0eb7530d@sha256:056298153c8611c261f7d02a1ea01fc7b610da43059374ee7a92527cdf8bdd48
+          name: container-image
